Fix #5 : Make logo responsive
Non-responsive logo was asking for too much room.

--- a/css/style.scss
+++ b/css/style.scss
@@ -76,3 +76,7 @@ header{
   -moz-filter:#{'invert()'};
   filter:#{'invert()'};
 }
+
+.intro-text .img-responsive {
+  margin: 0 auto;
+}
